--- a/dashboard-shell/src/index.css
+++ b/dashboard-shell/src/index.css
@@ -1,13 +1,15 @@
 :root {
   font-size: 16px;
   --primary: #041e42;
+  /* --primary: #fff; */
 }
 
 body {
   margin: 0;
   padding: 0;
+  background: #fdfdfd;
 }
 
 main {
-  margin-left: 5rem;
+  margin-left: 6rem;
 }
