--- a/packages/finance-dashboard/src/Tile.css
+++ b/packages/finance-dashboard/src/Tile.css
@@ -2,8 +2,9 @@
   background-color: #fff;
   padding: 20px;
   max-width: 100%;
-  max-height: 300px;
+  max-height: 600px;
   overflow: auto;
+  border: 1px solid black;
 }
 
 .Tile h4 {
