--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -40,9 +40,36 @@ tr:nth-child(even) {
 }
 
 .InvestTotals {
-  display: flex;
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  gap: 20px;
 }
 
 .InvestTotals > .Tile {
   max-width: 35vw;
+  margin-bottom: 20px;
+}
+
+.InvestTotals > .Tile h1 {
+  font-size: 40px;
+  margin: 10px 0;
+}
+
+.InvestTotals > .Tile h4 {
+  color: white;
+}
+
+.InvestTotals > .Tile.overall-total {
+  background-color: #78c350;
+  color: white;
+}
+
+.InvestTotals > .Tile.euro-total {
+  background-color: #45bbe0;
+  color: white;
+}
+
+.InvestTotals > .Tile.dollar-total {
+  background-color: #f06292;
+  color: white;
 }
