--- a/packages/finance-dashboard/src/Tile.css
+++ b/packages/finance-dashboard/src/Tile.css
@@ -1,6 +1,7 @@
 .Tile {
   background-color: #fff;
   padding: 20px;
+  min-height: 99px;
   max-width: 100%;
   max-height: 600px;
   overflow: auto;
