Better layout not 100% mobile freindly yet

--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -70,6 +70,6 @@ tr:nth-child(even) {
 }
 
 .flex {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 300px;
 }
