--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -27,8 +27,9 @@ tr:nth-child(even) {
 
 .summary-panels {
   display: grid;
-  grid-template-columns: 200px 200px;
+  grid-template-columns: 200px 200px 300px;
   gap: 20px;
+  margin-bottom: 20px;
 }
 
 .BuyTable {
@@ -54,12 +55,10 @@ tr:nth-child(even) {
   transform: rotate(135deg);
 }
 
-.charts {
-  display: grid;
-  grid-template-columns: 1fr 300px;
-  margin-bottom: 20px;
-}
-
 .Chart {
   overflow: hidden;
+}
+
+.InvestmentsChart {
+  margin-bottom: 20px;
 }
