--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -62,3 +62,14 @@ tr:nth-child(even) {
 .InvestmentsChart {
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  .InvestmentTable tr th:first-child,
+  .InvestmentTable tr th:nth-child(3),
+  .InvestmentTable tr th:nth-child(6),
+  .InvestmentTable tr td:first-child,
+  .InvestmentTable tr td:nth-child(3),
+  .InvestmentTable tr td:nth-child(6) {
+    display: none;
+  }
+}
