--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -73,6 +73,11 @@ tr:nth-child(even) {
   max-width: 1000px;
 }
 
+input {
+  padding: 8px;
+  font-size: 16px;
+}
+
 @media only screen and (max-width: 768px) {
   .InvestmentTable tr th:first-child,
   .InvestmentTable tr th:nth-child(3),
