--- a/packages/finance-dashboard/src/index.css
+++ b/packages/finance-dashboard/src/index.css
@@ -25,6 +25,15 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
+.state {
+  position: absolute;
+  right: 20px;
+  font-size: 16px;
+  background-color: yellow;
+  padding: 10px 20px;
+  text-transform: uppercase;
+}
+
 .summary-panels {
   display: grid;
   grid-template-columns: 200px 200px 300px;
